--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "auth0-js": "^9.16.0",
     "gatsby": "^3.4.1",
     "gatsby-plugin-gatsby-cloud": "^2.5.0",
+    "gatsby-plugin-image": "^1.5.0",
+    "gatsby-plugin-sharp": "^3.5.0",
+    "gatsby-source-filesystem": "^3.5.0",
+    "gatsby-transformer-sharp": "^3.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
